# fastaar-django

./: .gitignore  README.md  pyproject.toml  runtests.py
.github/workflows/: ci.yml
fastaar_django/: __init__.py  apps.py  signals.py  urls.py  views.py
tests/: settings.py  test_views.py
