[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastaar-django"
version = "1.0.1"
description = "Django integration for the Fastaar payment gateway — accept bKash & Nagad payments in Bangladesh."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=3.2",
    "fastaar-python @ git+https://github.com/fastaar/fastaar-python.git",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-django>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastaar_django*"]
